fix rating as dropdown & tagbox chevron vertical alignment

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -59,8 +59,9 @@
 
 .sd-dropdown_chevron-button {
   position: absolute;
+  height: calcSize(3);
   inset-inline-end: calcSize(1.5);
-  inset-block-start: calcSize(1.5);
+  inset-block-start: calc(50% - calcSize(1.5));
 }
 
 .sd-dropdown_clean-button-svg {
